--- a/Protein Crystallization/Protein Crystallization.csproj
+++ b/Protein Crystallization/Protein Crystallization.csproj
@@ -50,6 +50,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BasicForm.Designer.cs">
+      <DependentUpon>BasicForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CameraApi.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,13 +64,23 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Meteroi.cs" />
+    <Compile Include="MVSDK.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptingTelnet.cs" />
+    <Compile Include="Snapshot.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Snapshot.Designer.cs">
+      <DependentUpon>Snapshot.cs</DependentUpon>
+    </Compile>
     <Compile Include="Terminal.cs" />
     <Compile Include="TerminalDemo.cs" />
     <Compile Include="VirtualScreen.cs" />
     <Compile Include="VirtualScreenTest.cs" />
+    <EmbeddedResource Include="BasicForm.resx">
+      <DependentUpon>BasicForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -76,6 +93,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Snapshot.resx">
+      <DependentUpon>Snapshot.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
